change Customer entity class to be xml parseable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 default.buffer=2048
-database.url=jdbc:sqlite:sqlite.sqlite
+database.url=jdbc:sqlite:customers.sqlite
 database.user=
 database.password=
